# pass-web

./: .gitignore  README.md  docker-compose.yml  env.example  makefile  pyproject.toml  todo.md
.github/workflows/: test.yml
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: GpgPasswordModal.tsx  Home.tsx  Login.tsx  Modal.tsx  ThemeManager.tsx  ThemeSwitcher.tsx
frontend/src/context/: AuthContext.tsx  AuthProvider.tsx  FileRepositoryContext.tsx  FileRepositoryProvider.tsx  ThemeRepositoryContext.tsx  ThemeRepositoryProvider.tsx
frontend/src/domain/: passFile.ts
frontend/src/hooks/: useAuth.tsx  useFileRepository.ts  useFileThemeRepository.ts
frontend/src/repository/: apiFIleRepository.ts  fileRepository.ts  file_repository.ts  themeRepository.ts  theme_repository.ts
frontend/src/themes/: cyberpunk.css  default.css  retro.css
ops/: generate_hash.sh  hash_password.py  install.sh
ops/containers/be/: Dockerfile  entrypoint.sh
src/: config.py  factory.py  main.py
src/domain/: pass_file.py
src/repos/: file_repository.py  gpg_decryptor.py
src/services/: pass_service.py
src/web/: adapters.py  auth.py  entities.py  entrypoints.py
tests/: conftest.py  test_config.py
tests/__fixtures__/: expected.txt  expected.txt.gpg
tests/domain/: test_pass_file.py
tests/integration/: test_api.py
tests/repos/: test_gpg_decryptor.py  test_pass_file_repository.py
tests/services/: test_pass_service.py
tests/web/: test_adapters.py  test_auth.py  test_entities.py
(+5 files in other folders)
